--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
     {
       width:80%;
       height: auto;
+      margin-left: 50px; /* 右に10px移動 */
     }
     .target_canvas_all
     {
-        display: flex;
-        flex-direction: column; /* 子要素を縦に配置 */
-        justify-content: center; /* 水平方向（左右）の中央揃え */
-        align-items: center; /* 垂直方向（上下）の中央揃え */
+      display: flex;
+      flex-direction: column; /* 子要素を縦に配置 */
+      justify-content: center; /* 水平方向（左右）の中央揃え */
+      align-items: center; /* 垂直方向（上下）の中央揃え */
     }
     #explanation
     {
