--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <style>
-    body 
+    body
     {
-      position: relative;
-      background-color: #191970; /* 背景色をダークブルーに設定 */
-      color: #f0f8ff; /* テキスト色をアンチークに設定 */
+      /*background-color: #191970; /* 背景色をダークブルーに設定 */
       margin: 0; /* デフォルトのマージンを削除 */
       padding: 0; /* デフォルトのパディングを削除 */
+      background-image: url('aaabbb.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      height: 100vh; /* 画面の高さいっぱいに設定 */
     }
     .all
     {
@@ -38,7 +41,7 @@
     {
       font-size: 20px; /* ピクセル単位でのフォントサイズ指定 */
       text-align: center; /* テキストを中央揃えにする */
-      color: rgb(0, 210, 210);
+      color: rgb(240, 240, 240);
     }
     /* 変数の定義 */
     :root
@@ -65,7 +68,7 @@
     {
         width: 200px;
         height: 200px;
-        background-color: rgba(0, 0, 255, 1); /* 透明度が50%の黒色背景 */
+        background-color: rgb(240, 240, 240); /* 透明度が50%の黒色背景 */
         font-size: 50px; /* ピクセル単位でのフォントサイズ指定 */
         text-align: center; /* テキストを中央揃えにする */
         line-height: 200px; /* 要素の高さ */
@@ -81,7 +84,7 @@
         height: 300px;
         column-gap: 10px; /* 列間のマージン */
         row-gap: 10px; /* 行間のマージン */
-        margin-right: 250px; /* 左に10px移動 */
+        margin-right: 230px; /* 左に10px移動 */
         margin-top: 50px; /* 上マージンで下に100px移動 */
     }
     .choice
@@ -161,7 +164,6 @@
 
         if(!game_bool)//記憶中
         {
-          document.body.style.backgroundColor = 'black';
 
           stayTime = new Date();
           //古い要素削除
@@ -205,7 +207,6 @@
         if(aaa<=0)
         {
           game_bool = true;
-          document.body.style.backgroundColor = "#191970";
 
           clearInterval(start_timer_func);
           //すべて無四角にする
@@ -289,8 +290,8 @@
       <div class="all">
         <div class="canvas_and_timer">
           <div class="target_canvas_all">
-              <div id="canvas10" class="start" onmousedown="game_click()">スタート</div>
-              <div class="timer" style="text-align: center">記憶時間：<span id="time">3</span>秒</div>
+            <div class="timer" style="text-align: center">記憶時間：<span id="time">3</span>秒</div>
+            <div id="canvas10" class="start" onmousedown="game_click()">スタート</div>
           </div>
         </div>
         <div class="choices">
